# Specula

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  deny.toml  dist-workspace.toml  installer.nsi
.github/workflows/: deny.yaml  release.yaml
src/: cell.rs  config.rs  core.rs  grid.rs  gui.rs  main.rs  terminal.rs  window.rs
src/core/: cell.rs  grid.rs  input.rs  terminal.rs
src/gui/: app.rs  atlas.rs  renderer.rs  shader.wgsl  window.rs
src/gui/window/: event.rs  mouse.rs  selection.rs
wix/: main.wxs
