[package]
name = "specula"
version = "0.1.0-beta.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ["serde"] }
simplelog = "0.12"
bitflags = "2"

portable-pty = "0.9"
vte = "0.15"
winit = "0.30"
wgpu = "29.0.1"
pollster = "0.4"
bytemuck = "1"
fontdue = "0.9"
unicode-width = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
fontdb = "0.23"
