[package]
name = "specula"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Kirby0717 <niconicoyusei@gmail.com>"]
description = "Rustで作ってみた普通のターミナル。特徴はなにもなくなんとなく動く。"
repository = "https://github.com/Kirby0717/specula"
build = "build.rs"

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ["serde"] }
simplelog = "0.12"
bitflags = "2"

portable-pty = "0.9"
vte = "0.15"
winit = "0.30"
wgpu = "29.0.1"
pollster = "0.4"
bytemuck = "1"
fontdue = "0.9"
unicode-width = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
fontdb = "0.23"
image = "0.25"

[build-dependencies]
winresource = "0.1"
